force-app/main/default/objects/EV_RemplazoCamposEmail__mdt/EV_RemplazoCamposEmail__mdt.object-meta.xml
<CustomObject>
    <label>Remplazo de campos email</label>
    <pluralLabel>Remplazos de campos email</pluralLabel>
</CustomObject>