force-app/main/default/objects/EV_RemplazoCamposEmail__mdt/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asunto</label>
    <type>Checkbox</type>
</CustomField>