force-app/main/default/objects/EV_RemplazoCamposEmail__mdt/fields/EsURL__c.field-meta.xml
<CustomField>
    <fullName>EsURL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check a marcar cuando queremos indicar que esta variable esta en la URL y el mapeo deberá validar el formato para que sea formato URL</description>
    <label>EsURL</label>
    <type>Checkbox</type>
</CustomField>