force-app/main/default/objects/EV_RemplazoCamposEmail__mdt/fields/EV_Nuevo_valor__c.field-meta.xml
<CustomField>
    <fullName>EV_Nuevo_valor__c</fullName>
    <label>Nuevo valor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>