force-app/main/default/objects/EV_RemplazoCamposEmail__mdt/fields/EV_Valor_a_remplazar__c.field-meta.xml
<CustomField>
    <fullName>EV_Valor_a_remplazar__c</fullName>
    <label>Valor a remplazar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>